# dio

./: .gitignore  README.md  package-lock.json  package.json  sign.sh
src/: App.css  App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs  prefs.rs  scanner.rs  state.rs  video.rs  watcher.rs
src-tauri/src/commands/: categories.rs  drive.rs  duplicates.rs  entities.rs  mod.rs  playback.rs  playlists.rs  scan.rs  videos.rs
src-tauri/src/db/: mod.rs  models.rs
src/components/: ConfirmModal.tsx  DuplicateReview.tsx  PlayTray.tsx  Player.tsx  Sidebar.tsx  VideoGrid.tsx
