[package]
name = "dio"
version = "0.1.0"
description = "Media management tool for external drives"
authors = ["rudivanwyk"]
edition = "2021"

[lib]
name = "dio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
chrono = "0.4"
base64 = "0.22"

